data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1553.wast
;; 4. **Test Description:**    - Place `unreachable` within a `br_if` instruction that expects an integer condition and follows with another instruction after `unreachable` while the `br_if` should terminate the block.    - **Constraint Checked:** Ensures proper handling and type expectation around `br_if` with potentially mismatched stack types.    - **Relation to Type Mismatch:** Checks if branching control flow with `unreachable` adheres to type constraints.

(assert_invalid
  (module (func $test-br_if-unreachable
    (block (br_if 0 (i32.const 0) (unreachable) (i32.const 1)))
  ))
  "type mismatch"
)